--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,15 +22,15 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    # twitter:         <username>
-    sina-weibo:     https://weibo.com/u/6280722873
+    # sina-weibo:     https://weibo.com/u/6280722873
     github:          https://github.com/Alfred-Alan
-    # email:           <mail@domain.tld>
+    email:           l3210440292@gmail.com
     # rss:             https://<url>/feed.xml
-    facebook:        alfred.alan.7739
+    twitter:         Alfred__Alan
+    # facebook:        alfred.alan.7739
     # google:          <number>
     # vk:              <username>
-    youtube:         UCJd-ApxX9Np3mUeRtcdf2ug
+    # youtube:         UCJd-ApxX9Np3mUeRtcdf2ug
     # vimeo:           <username>
     # vine:            <username>
     spotify:         https://open.spotify.com/user/f43n1k1sc2yz2b3nb69ib8ase?si=wjpDRGuESqOecixyi7ZJEg
