--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -7,7 +7,7 @@ basics:
   picture: "/assets/img/icon.png"
   email: "l3210440292@gmail.com"
   phone: "17640666245"
-  website: "https://www.alfred-alan.com"
+  website: "https://144.34.188.119"
   summary: >
     Richard hails from Tulsa.
     He has earned degrees from the University of Oklahoma and Stanford. (Go Sooners and Cardinals!)
