--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ legal:
 copyright:             © 2021. All rights reserved.
 
 # Format of the permalinks
-permalink:             /blog/:categories/:year-:month-:day-:title/
+permalink:             /blog/:categories/:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:              10
