--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 lang:                  CN
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Alfred-Alan
+title:                 Alfred's Blog
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -40,7 +40,7 @@ logo:                  /assets/img/icon.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                Alfred-Alan
+  name:                Alfred
   email:               l3210440292@gmail.com
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
@@ -75,7 +75,7 @@ legal:
     url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2021. All rights reserved.
+copyright:             Alfred © 2022. All rights reserved.
 
 # Format of the permalinks
 permalink:             /blog/:categories/:title/
@@ -193,7 +193,7 @@ kramdown:
 
 # Set your Google Analytics id to receive `pageview` events.
 # To remove Google Anaylics from your page, remove the line below.
-google_analytics:      G-M9S9FSDXB1
+google_analytics:      G-SB2E6W3P02
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
